# CmakeDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/nate/cmakedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/cjson/: CMakeLists.txt
app/src/main/cpp/one/: CMakeLists.txt  one.cpp  one.h
app/src/main/cpp/two/: CMakeLists.txt  two.cpp  two.h
app/src/main/java/com/nate/cmakedemo/: MainActivity.java
app/src/test/java/com/nate/cmakedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
